@@ -1,3 +1,8 @@
+2006-09-01  Alexis Sukrieh  <sukria@backup-manager.org>
+
+	* t/testlib.sh:
+	  + That file was hit by bug#119 too, all the test scripts were broken.
+
 2006-08-31  Alexis Sukrieh  <sukria@backup-manager.org>
 
 	* lib/gettext.sh
